# Vulkan-Raytracer

./: CMakeLists.txt  README.md
Assets/: CMakeLists.txt
Assets/Shaders/: Graphics.frag  Graphics.vert  Material.glsl  UniformBufferObject.glsl
Assets/Shaders/Compiled/: Graphics.frag.spv  Graphics.vert.spv
raytracer/: CMakeLists.txt  pch.h
raytracer/Platform/: StandardTypes.h
raytracer/Vulkan/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  BufferUtilities.h  CommandBuffers.cpp  CommandBuffers.h  CommandPool.cpp  CommandPool.h  Core.cpp  Core.h  DebugMessenger.cpp  DebugMessenger.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorBinding.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Device.h  DeviceMemory.cpp  DeviceMemory.h  Enumerate.h  Fence.cpp  Fence.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  Info.cpp  Info.h  Instance.cpp  Instance.h  PipelineLayout.cpp  PipelineLayout.h  RenderPass.cpp  (+16 more)
raytracer/Vulkan/Assets/: UniformBuffer.cpp  UniformBuffer.h
raytracer/Vulkan/Debug/: Info.cpp  Info.h  Messenger.cpp  Messenger.h  Utilities.cpp  Utilities.h
raytracer/Vulkan/Descriptor/: DescriptorBinding.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSetManager.cpp  DescriptorSetManager.h  DescriptorSets.cpp  DescriptorSets.h
raytracer/Vulkan/Raytracing/: Application.cpp  Application.h
raytracer/Vulkan/Resources/: Material.h  Model.cpp  Model.h  Procedural.h  Scene.cpp  Scene.h  Sphere.h  Texture.cpp  Texture.h  TextureImage.cpp  TextureImage.h  UniformBuffer.cpp  UniformBuffer.h  Vertex.h
raytracer/core/: Raytracer.cpp  Raytracer.h  Window.cpp  Window.h  WindowProperties.h  main.cpp
raytracer/core/Utilities/: Glm.h  StbImage.cpp  StbImage.h
winapp/: CMakeLists.txt
